<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello, Fragment"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="None"
        android:id="@+id/textView"/>
</LinearLayout>