package com.jyheo.debugthislab;


import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void mainActivityTest() {
        onView(allOf(withId(R.id.Name), isDisplayed()))
                .perform(click())
                .perform(replaceText("john"), closeSoftKeyboard());

        onView(allOf(withId(R.id.OK), isDisplayed()))
                .perform(click());

        onView(withId(R.id.textview))
                .check(matches(withText("Hello")));

    }

    @Test
    public void mainActivityTest2() {
        onView(allOf(withId(R.id.Name), isDisplayed()))
                .perform(click())
                .perform(replaceText("john2"), closeSoftKeyboard());

        onView(allOf(withId(R.id.OK), isDisplayed()))
                .perform(click());

        onView(withId(R.id.OK))
                .check(matches(withText("FAILED")));

    }
}
